--- a/frontend/src/pages/agentStyle.scss
+++ b/frontend/src/pages/agentStyle.scss
@@ -9,16 +9,116 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    
+
+    .formul img{
+        width: 200px;
+        height: 200px;
+    }
+
+    
+    .linhas-externas{
+        position: relative;
+        width: 850px;
+        height: 550px;
+        margin: 50px 0 0 100px ;
+        z-index: 0;
+        
+    }
+
+.linha-1{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    width: 90%;
+    height: 90%;
+    background-color: #a1cdff;
+    clip-path: polygon(
+        10% 0%, 90% 0%,  
+        100% 10%, 100% 90%, 
+        90% 100%, 10% 100%, 
+        0% 90%, 0% 10% 
+      );
+}
+
+.linha-2{
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 700px;
+    height: 450px;
+    background-color: #fff;
+    clip-path: polygon(
+        10% 0%, 90% 0%,   
+        100% 10%, 100% 90%, 
+        90% 100%, 10% 100%,
+        0% 90%, 0% 10%    
+      );
+}
     
     .main{
-        width: 500px;
-        height: 1000px;
-        background-color: #6a99ff;
+        z-index: 1;
+        position: absolute;
+        top: 46%;
+        left: 33%;
+        width: 650px;
+        height: 400px;
+        background-color: #a1cdff;
         display: flex;
         flex-direction: column;
         justify-content: start;
+        align-items: start;
+        gap: 0px;
+        clip-path: polygon(
+    10% 0%, 90% 0%,   /* topo reto */
+    100% 10%, 100% 90%, /* laterais chanfradas */
+    90% 100%, 10% 100%, /* base reta */
+    0% 90%, 0% 10%)    
+       
+    }
+
+    .inputs{
+        margin-top: 60px;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        flex-direction: column;
+        gap: 30px;
+
+        h1{
+            margin-left: 100px;
+        }
+    }
+
+    label {
+        display: flex;
+        justify-content: center;
         align-items: center;
         gap: 10px;
+        margin: 0 0 0 100px;
+
+        p{
+            font-size: 20px;
+            font-weight: 200;
+            font-family:Verdana, Geneva, Tahoma, sans-serif;
+        }
+
+        input[type="radio"] {
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            border-radius: 4px; // quadrado com cantos arredondados
+            background: white;
+            cursor: pointer;
+          
+            &:checked {
+              background-color: #007BFF;
+            }
+          }
+          
+          
     }
+
+
 }
+
